2020-10-05  Diego Pino Garcia  <dpino@igalia.com>

        [WPE] Update baselines of two touch-events tests after r266649.

        Unreviewed test gardening.

        General baselines are updated because WPE is the only port running
        these tests. They're skipped in all other ports.

        * web-platform-tests/touch-events/historical-expected.txt:
        * web-platform-tests/touch-events/idlharness.window-expected.txt:

2020-10-05  Alex Christensen  <achristensen@webkit.org>

        Remove unused -expected.txt file

        * web-platform-tests/url/urlencoded-parser-expected.txt: Removed.

2020-10-05  Alex Christensen  <achristensen@webkit.org>

        URLParser should fail to parse URLs with hosts containing invalid punycode encodings
        https://bugs.webkit.org/show_bug.cgi?id=217285

        Reviewed by Darin Adler.

        * web-platform-tests/url/a-element-expected.txt:
        * web-platform-tests/url/a-element-xhtml-expected.txt:
        * web-platform-tests/url/failure-expected.txt:
        * web-platform-tests/url/toascii.window-expected.txt:
        * web-platform-tests/url/url-constructor-expected.txt:

2020-10-05  Alex Christensen  <achristensen@webkit.org>

        When appending a Windows drive letter to a file URL, remove any path we may have copied from the base URL
        https://bugs.webkit.org/show_bug.cgi?id=217284

        Reviewed by Darin Adler.

        * web-platform-tests/url/a-element-expected.txt:
        * web-platform-tests/url/a-element-xhtml-expected.txt:
        * web-platform-tests/url/resources/urltestdata.json:
        * web-platform-tests/url/url-constructor-expected.txt:

2020-10-05  Alex Christensen  <achristensen@webkit.org>

        Fix UTF-8 encoding in URL parsing
        https://bugs.webkit.org/show_bug.cgi?id=217289

        Reviewed by Darin Adler.

        * web-platform-tests/url/a-element-expected.txt:
        * web-platform-tests/url/a-element-origin-expected.txt: